deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-crud-pm-app
  name: spring-crud-pm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-crud-pm-app
  template:
    metadata:
      labels:
        app: spring-crud-pm-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: docker.io/csnitsh/spring-crud-pm-app:1.0.15
        name: spring-crud-pm-app
        ports:
        - containerPort: 8085
        resources: {}
status: {}
