service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-crud-pm-app
  name: spring-crud-pm-app
spec:
  ports:
  - port: 8085
    protocol: TCP
    targetPort: 8085
  selector:
    app: spring-crud-pm-app
